# Algorithms_and_DataStructure

./: .gitignore  README.md  pyproject.toml
CrackingCodingInterview_Python/Arrays_and_Strings/: checkPerm.py  isUnique.py  oneAway.py  permPali.py  stringComp.py  test_checkPerm.py
CrackingCodingInterview_Python/Linked_List/: deleteMid.py  kthelement.py  linkedlist.py  removeDuplicate.py  sumList.py  test_kthelement.py  test_removeDuplicate.py
educative.io/: library.py
general-practice/: pyproject.toml
general-practice/general_practice/: __init__.py  arrays.py  notes.md
general-practice/tests/: test_arrays.py  test_general_practice.py
python_expert/: youtubetut.py
runtestone_algo/: ch03-algo.py  ch04.py  fraction.py  msdie.py
