[tool.poetry]
name = "alorithms_and_datastructure"
version = "0.1.0"
description = "Practice for algo and datastructure"
authors = ["rob <thaty.poly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
